force-app/main/default/objects/IncidentUpdate__c/IncidentUpdate__c.object-meta.xml
<CustomObject>
    <description>Updates related to an incident. Ideally you should post new status updates every hour or so, depending on the SLA with your customers. They want to know what you are doing to restore the service!</description>
    <label>Incident update</label>
    <nameField>
        <displayFormat>Update {000000}</displayFormat>
        <label>Incident update number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>