force-app/main/default/objects/IncidentUpdate__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of what this update is about. If the update is to inform that the system has returned to normal, and the incident has been taken care of, then you can use the checkbox &quot;is resolution&quot; to close the issue.</description>
    <inlineHelpText>Description of what this update is about. If the update is to inform that the system has returned to normal, and the incident has been taken care of, then you can use the checkbox &quot;is resolution&quot; to close the issue.</inlineHelpText>
    <label>Description</label>
    <length>40000</length>
    <type>Html</type>
</CustomField>