force-app/main/default/objects/IncidentUpdate__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <description>Parent incident which this update refers to.</description>
    <inlineHelpText>Parent incident which this update refers to.</inlineHelpText>
    <label>Incident</label>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>Incident updates</relationshipLabel>
    <relationshipName>IncidentUpdates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>