force-app/main/default/objects/IncidentUpdate__c/fields/IncidentStatusUpdate__c.field-meta.xml
<CustomField>
    <fullName>IncidentStatusUpdate__c</fullName>
    <description>Select the new status for the related incident, if applicable. For example: if this update is about the resolution, then the incident&#39;s status could be &quot;monitoring&quot; or &quot;resolved&quot;.</description>
    <inlineHelpText>Select the new status for the related incident, if applicable. For example: if this update is about the resolution, then the incident&#39;s status could be &quot;monitoring&quot; or &quot;resolved&quot;.</inlineHelpText>
    <label>New incident status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncidentStatuses</valueSetName>
    </valueSet>
</CustomField>