force-app/main/default/objects/IncidentUpdate__c/fields/SystemId__c.field-meta.xml
<CustomField>
    <fullName>SystemId__c</fullName>
    <formula>Incident__r.System__c</formula>
    <label>System&#39;s ID</label>
    <type>Text</type>
</CustomField>