force-app/main/default/objects/IncidentUpdate__c/fields/SystemStatusUpdate__c.field-meta.xml
<CustomField>
    <fullName>SystemStatusUpdate__c</fullName>
    <description>Select the new status for the related system, if applicable. For example: if this update is about the resolution, then select the appropriate system status.</description>
    <inlineHelpText>Select the new status for the related system, if applicable. For example: if this update is about the resolution, then select the appropriate system status.</inlineHelpText>
    <label>New system status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SystemStatuses</valueSetName>
    </valueSet>
</CustomField>